8274122: Make value of exceptionExpected more robust to Windows version